[project]
name = "0000mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.2",
    "mcp[cli]>=1.25.0",
    "mpi[cli]>=1.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]



[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]